# lattice_resonances

./: environment.yml  pyproject.toml  readme.md
slrs/: Ag_EC.tab  SiC.tab  main.py
slrs/dyadics/: direct.py  directnu.py  directnumba.py  ewald.py
slrs/dyadics/__pycache__/: direct.single_point-28.py310.1.nbc  direct.single_point-28.py310.nbi
slrs/inputs/: input_tm_2d_honeycomb.toml  tm_sic.toml
slrs/results/: 10000.0_5x5_EnsembleAverage.npz  12500.0_10x10_EnsembleAverage.npz  12500.0_5x5_EnsembleAverage.npz  15000.0_10x10_EnsembleAverage.npz  15000.0_5x5_EnsembleAverage.npz  30000.0_10x10_EnsembleAverage.npz  30000.0_15x15_EnsembleAverage.npz  30000.0_5x5_EnsembleAverage.npz  6000.0_10x10_EnsembleAverage.npz  6000.0_15x15_EnsembleAverage.npz  6000.0_5x5_EnsembleAverage.npz  6500.0_10x10_EnsembleAverage.npz  6500.0_15x15_EnsembleAverage.npz  6500.0_5x5_EnsembleAverage.npz
slrs/scripts/: finite.py  infinite.py  infinite_cross_section.py  infinite_polarisability.py
slrs/types/: calculation.py  field.py  lattice.py  particle.py
slrs/utils/: conversions.py  logging.py
slrs/verify/: koenderinck_fig_3.py  koenderinck_fig_4.py
